--- a/read/明朝那些事儿.html
+++ b/read/明朝那些事儿.html
@@ -9,9 +9,9 @@
     <link rel="preload stylesheet" href="/assets/style.BXEXMwOQ.css" as="style">
     <link rel="preload stylesheet" href="/vp-icons.css" as="style">
     
-    <script type="module" src="/assets/app.BYD5at8V.js"></script>
+    <script type="module" src="/assets/app.Cz8fbbIX.js"></script>
     <link rel="preload" href="/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
-    <link rel="modulepreload" href="/assets/chunks/theme.DEYuuF5m.js">
+    <link rel="modulepreload" href="/assets/chunks/theme.DoBzvfek.js">
     <link rel="modulepreload" href="/assets/chunks/framework.5cuxq5ua.js">
     <link rel="modulepreload" href="/assets/read_明朝那些事儿.md.C2g1EaW1.lean.js">
     <link rel="icon" type="image/jpg" sizes="32x32" href="/logo.jpg">
