deploy: NaNaYi/yina-blog-vitepress@7a1e39e56b751139e4669545ea7651bcc5440580

--- a/read/阮一峰期刊.html
+++ b/read/阮一峰期刊.html
@@ -9,9 +9,9 @@
     <link rel="preload stylesheet" href="/assets/style.BXEXMwOQ.css" as="style">
     <link rel="preload stylesheet" href="/vp-icons.css" as="style">
     
-    <script type="module" src="/assets/app.dxXljfUH.js"></script>
+    <script type="module" src="/assets/app.S0fJ3clm.js"></script>
     <link rel="preload" href="/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
-    <link rel="modulepreload" href="/assets/chunks/theme.mYhxDNU7.js">
+    <link rel="modulepreload" href="/assets/chunks/theme.rzkc-cAX.js">
     <link rel="modulepreload" href="/assets/chunks/framework.5cuxq5ua.js">
     <link rel="modulepreload" href="/assets/read_阮一峰期刊.md.Byw7Hz4H.lean.js">
     <link rel="icon" type="image/jpg" sizes="32x32" href="/logo.jpg">
