--- a/read/重来3跳出疯狂的忙碌.html
+++ b/read/重来3跳出疯狂的忙碌.html
@@ -9,9 +9,9 @@
     <link rel="preload stylesheet" href="/assets/style.BXEXMwOQ.css" as="style">
     <link rel="preload stylesheet" href="/vp-icons.css" as="style">
     
-    <script type="module" src="/assets/app.dxXljfUH.js"></script>
+    <script type="module" src="/assets/app.S0fJ3clm.js"></script>
     <link rel="preload" href="/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
-    <link rel="modulepreload" href="/assets/chunks/theme.mYhxDNU7.js">
+    <link rel="modulepreload" href="/assets/chunks/theme.rzkc-cAX.js">
     <link rel="modulepreload" href="/assets/chunks/framework.5cuxq5ua.js">
     <link rel="modulepreload" href="/assets/read_重来3跳出疯狂的忙碌.md.iRcLm-qt.lean.js">
     <link rel="icon" type="image/jpg" sizes="32x32" href="/logo.jpg">
