deploy: NaNaYi/yina-blog-vitepress@1e95786c88228f9771dcf52411e638e680137c8a

--- a/life/footprint/广州.html
+++ b/life/footprint/广州.html
@@ -9,9 +9,9 @@
     <link rel="preload stylesheet" href="/assets/style.g1NVP2bQ.css" as="style">
     <link rel="preload stylesheet" href="/vp-icons.css" as="style">
     
-    <script type="module" src="/assets/app.BlVuhP1J.js"></script>
+    <script type="module" src="/assets/app.DC2Nb7eU.js"></script>
     <link rel="preload" href="/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
-    <link rel="modulepreload" href="/assets/chunks/theme.D_ETx5se.js">
+    <link rel="modulepreload" href="/assets/chunks/theme.UI2tsAed.js">
     <link rel="modulepreload" href="/assets/chunks/framework.5cuxq5ua.js">
     <link rel="modulepreload" href="/assets/life_footprint_广州.md.CKyEdNZZ.lean.js">
     <link rel="icon" type="image/jpg" sizes="32x32" href="/logo.jpg">
