--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <link rel="preload stylesheet" href="/assets/style.g1NVP2bQ.css" as="style">
     <link rel="preload stylesheet" href="/vp-icons.css" as="style">
     
-    <script type="module" src="/assets/app.BlVuhP1J.js"></script>
+    <script type="module" src="/assets/app.DC2Nb7eU.js"></script>
     <link rel="preload" href="/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
     <link rel="icon" type="image/jpg" sizes="32x32" href="/logo.jpg">
     <script src="https://strava-embeds.com/embed.js" defer></script>
