--- a/life/日记/2025日记.html
+++ b/life/日记/2025日记.html
@@ -9,9 +9,9 @@
     <link rel="preload stylesheet" href="/assets/style.l5CLxYsH.css" as="style">
     <link rel="preload stylesheet" href="/vp-icons.css" as="style">
     
-    <script type="module" src="/assets/app.DFz7A-BJ.js"></script>
+    <script type="module" src="/assets/app.CITvoU2f.js"></script>
     <link rel="preload" href="/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
-    <link rel="modulepreload" href="/assets/chunks/theme.DvCL5NRK.js">
+    <link rel="modulepreload" href="/assets/chunks/theme.DJ1VFkJ8.js">
     <link rel="modulepreload" href="/assets/chunks/framework.5cuxq5ua.js">
     <link rel="modulepreload" href="/assets/life_日记_2025日记.md.B_HOwH9j.lean.js">
     <link rel="icon" type="image/jpg" sizes="32x32" href="/logo.jpg">
