deploy: NaNaYi/yina-blog-vitepress@be64dd57d34677f7b4d7842e7cb63c68cfdb2604

--- a/law/index.html
+++ b/law/index.html
@@ -9,9 +9,9 @@
     <link rel="preload stylesheet" href="/assets/style.l5CLxYsH.css" as="style">
     <link rel="preload stylesheet" href="/vp-icons.css" as="style">
     
-    <script type="module" src="/assets/app.Dtn1xSxC.js"></script>
+    <script type="module" src="/assets/app.Bd5U51GL.js"></script>
     <link rel="preload" href="/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
-    <link rel="modulepreload" href="/assets/chunks/theme.CqPBg9FJ.js">
+    <link rel="modulepreload" href="/assets/chunks/theme.DFMBdO6h.js">
     <link rel="modulepreload" href="/assets/chunks/framework.5cuxq5ua.js">
     <link rel="modulepreload" href="/assets/law_index.md.DIwYCq2Z.lean.js">
     <link rel="icon" type="image/jpg" sizes="32x32" href="/logo.jpg">
