--- a/read/books/我有自己的宇宙.html
+++ b/read/books/我有自己的宇宙.html
@@ -9,9 +9,9 @@
     <link rel="preload stylesheet" href="/assets/style.l5CLxYsH.css" as="style">
     <link rel="preload stylesheet" href="/vp-icons.css" as="style">
     
-    <script type="module" src="/assets/app.Bwr7QxqV.js"></script>
+    <script type="module" src="/assets/app.Dxzt9teF.js"></script>
     <link rel="preload" href="/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
-    <link rel="modulepreload" href="/assets/chunks/theme.BPPX4jIu.js">
+    <link rel="modulepreload" href="/assets/chunks/theme.B3_ArFdU.js">
     <link rel="modulepreload" href="/assets/chunks/framework.5cuxq5ua.js">
     <link rel="modulepreload" href="/assets/read_books_我有自己的宇宙.md.DG3GxtD2.lean.js">
     <link rel="icon" type="image/jpg" sizes="32x32" href="/logo.jpg">
